--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Dao Duy Thai",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
+    "mongo-client": "^0.2.1",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
     "nodemon": "^3.0.3"
   }
 }
