--- a/.env
+++ b/.env
@@ -4,4 +4,7 @@ PORT = 9999
 CLIENT = "http://localhost:3000"
 
 # URL connect to MongoDB
-URI_MONGODB = "mongodb://127.0.0.1:27017/Lab2DB"
+URI_MONGODB = "mongodb://127.0.0.1:27017/OnlyFuns"
+
+JWT_ACCESS_KEY=OnlyFuns
+JWT_REF_KEY=OnlyFunsnehihi
