--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ URI_MONGODB = "mongodb://127.0.0.1:27017/OnlyFuns"
 
 JWT_ACCESS_KEY=OnlyFuns
 JWT_REF_KEY=OnlyFunsnehihi
+TK = "trinhphuc980@gmail.com"
+MK = "kfqbavvazdgyysmd"
