--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "multer-gridfs-storage": "^1.3.0",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
+    "socket.io": "^4.7.5",
     "validator": "^13.11.0"
   },
   "devDependencies": {
